Fix bug in journey styles: callout too wide
The callout under the journey graph is too wide, resulting in the edges
being cropped.

This commit makes the callout 1% smaller on both the left and the right,
and then moves the arrow 1% to the left to compensate (so it's still
centered horizontally).

Also add a bit more space to the top and the bottom, because it's
all quite bunched up.

--- a/styles/common/journey.scss
+++ b/styles/common/journey.scss
@@ -1,4 +1,6 @@
 .journey figure.graph {
+  margin-bottom: 1em;
+
   svg {
     max-height: 200px;
     min-height: 100px;
@@ -32,8 +34,12 @@
 
   .callout {
     position:relative;
-    width:100%;
-    margin-top: 1.2em;
+    width: 98%;
+    margin: 1.2em 1%;
+
+    @media (max-width: 640px) {
+      margin: 1.2em auto;
+    }
 
     .date {
       float:right;
@@ -70,6 +76,7 @@
     .arrow {
       height:20px;
       margin-top:-40px;
+      margin-left: -1%;
       position:absolute;
       overflow:hidden;
               transform: scaleX(2);
